--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,15 @@
     </head>
     <body>
         <div class="container">
-            <!-- Main header -->
             <header>
                 <h1>User Management System</h1>
             </header>
 
             <main>
-                <!-- User creation/editing form -->
+                <!-- User Form -->
                 <section class="form-section">
                     <h2 id="form-title">Add New User</h2>
                     <form id="user-form">
-                        <!-- Hidden field to store user ID during editing -->
                         <input type="hidden" id="user-id" />
 
                         <div class="form-group">
@@ -58,7 +56,6 @@
                             <button type="submit" id="submit-btn">
                                 Add User
                             </button>
-                            <!-- Cancel button (hidden by default, shown during editing) -->
                             <button
                                 type="button"
                                 id="cancel-btn"
@@ -70,19 +67,16 @@
                     </form>
                 </section>
 
-                <!-- Users display section -->
+                <!-- Users List -->
                 <section class="users-section">
                     <h2>Users List</h2>
-                    <!-- Loading indicator -->
                     <div id="loading" class="loading">Loading users...</div>
-                    <!-- Error message display -->
                     <div
                         id="error-message"
                         class="error-message"
                         style="display: none"
                     ></div>
                     <div id="users-container">
-                        <!-- Users table (hidden until users are loaded) -->
                         <table id="users-table" style="display: none">
                             <thead>
                                 <tr>
@@ -94,7 +88,6 @@
                             </thead>
                             <tbody id="users-tbody"></tbody>
                         </table>
-                        <!-- No users message (shown when no users exist) -->
                         <div
                             id="no-users"
                             class="no-users"
@@ -107,7 +100,7 @@
             </main>
         </div>
 
-        <!-- Container for temporary success/error messages -->
+        <!-- Success/Error Messages -->
         <div id="message-container" class="message-container"></div>
 
         <script src="script.js"></script>
